# algonline

./: .gitignore  README.md
architecture/: README.md
nodejs-backend/: .app.js.swp  .db.js.swp  app.js  db.js  package-lock.json  package.json
nodejs-backend/controllers/: .usercontroller.js.swp  usercontroller.js
nodejs-backend/public/stylesheets/: .style.css.swp  index.css  style.css
nodejs-backend/routes/: .routes.js.swp  routes.js
nodejs-backend/views/: .index.jade.swp  index.jade  layout.jade
nodejs-webserver/: README.md  app.js  check_auth.js  db.js  package-lock.json  package.json  websocket.js
nodejs-webserver/controllers/: algorithmcontroller.js  panelcontroller.js  usercontroller.js
nodejs-webserver/models/: algorithm.js  user.js
nodejs-webserver/public/javascripts/: api.js  table.js
nodejs-webserver/public/stylesheets/: index.css  style.css  table.css
nodejs-webserver/routes/: routes.js
nodejs-webserver/views/: index.jade  layout.jade
nodejs-webserver/views/panel/: add-algorithm.jade  algorithm-details.jade  algorithm-stats.jade  algorithms.jade  buy-sell.jade  panel.jade  (+1 more)
postgresql/: README.md
rust-server/: Cargo.toml  README.md
rust-server/src/: config.rs  http.rs  main.rs  python_executor.rs  routehandler.rs  tradealgorithm.rs  websocket.rs
rust-server/src/api/: binance.rs  mod.rs
rust-server/src/routes/: mod.rs
rust-server/trading_algos/: jij.py  test.py
rust-server/trading_algos/test/: test1.py  test2.py
trading_algorithms/: README.md  concur.py  ema.py  mean_rev.py  sma.py  vwap.py
unix (security)/: README.md
(+15 files in other folders)
