[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.23"
futures = "0.3.0"
base64 = "0.21.5"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4"
async-trait = "0.1.74"
tokio = { version = "1.35.1", features = ["macros", "io-std", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-util = "0.3.29"
futures-channel = "0.3"
url = "2.5.0"
serde_json = { version = "1.0.108", features = ["preserve_order"]}
serde = { version = "1.0.193", features = ["derive"] }
tokio-util = "0.7.10"
tokio-stream = "0.1.14"
lazy_static = "1.4"
regex = "1.10.2"
sha1 = "0.10.6"
tokio-postgres = "0.7.10"
rust_decimal = { version = "1.33.1", features = ["db-postgres", "db-tokio-postgres"] }
rust_decimal_macros = "1.33.1"
rand = "0.8.5"
once_cell = "1.19.0"
serde_urlencoded = "0.7.1"
chrono = "0.4.31"
tokio-websockets = "0.5.1"
urlencoding = "2.1.3"
memmap2 = "0.9.4"
tempfile = "3.9.0"
deadpool-postgres = "0.12.1"
deadpool = "0.10.0"
sha256 = "1.5.0"
async-recursion = "1.0.5"
[dependencies.pyo3]
version = "*"
#features = ["extension-module"]

[[bin]]
edition = "2021"
name = "python-executor"
path = "src/python_executor.rs"
